--- a/index.html
+++ b/index.html
@@ -10,31 +10,37 @@
 </head>
 <body onload="Greeting()">
     <div class="title">
-        ...
+        <div class="title1">
+            <a href="index.html" style="text-decoration:none; color:darkblue"><font style="font-size:60px">Software Monthly</font></a>&nbsp;
+            <font style="font-size:30px">by Beta Jone</font>
+        </div>
+        <div class="title2">
+            
+        </div>
     </div>
-    <div class="pages">
-        <button class="animebutton" onclick="document.location = 'AnimeDownload/Page/AnimeDownload.html'">
-            Download Anime
-        </button>
-        <button class="gameguidebutton" onclick="document.location = 'GameGuide/Page/GameGuideMenu.html'">
-            Game Guide
-        </button>
-        <!--
-        <div class="temp1">
+    <div class="content">
+        <div class="content1">
+            <div class="content11">
+                - Borrow Software  With Low Cost Monthly.<br /><br />
+                - Try the Software First To See If It Fits Your Requirement. <br />&nbsp;
+                Then Pay.<br /><br />
+                - Customize Software If Needed. (Charged Separately)<br /><br />
+                - Lifetime Support.
+            </div>
+        </div>
+        <div class="content2">
 
         </div>
-        <div class="temp2">
-
-        </div>
-            -->
     </div>
-    <div class="about">
-        <div class="madeby">
-            Made by Beta Jone. Thanks for using my page. Hope you find it useful.
+    <!--<div class="about">
+        <div class="contactme">
+            Contact Me?&nbsp;&nbsp;
+            <a href="https://t.me/Software_Monthly" style=" text-decoration: none">Telegram</a>&nbsp;&nbsp;
+            <a href="https://discord.com/invite/97uHACc3cG" style=" text-decoration: none">Discord</a>
         </div>
         <div class="donateme">
             <a href="https://www.paypal.com/ncp/payment/7RCQ4QVACNLVW">Donate Me?</a>
         </div>
-    </div>
+    </div>-->
 </body>
 </html>
