--- a/index.html
+++ b/index.html
@@ -21,15 +21,38 @@
     <div class="content">
         <div class="content1">
             <div class="content11">
-                - Borrow Software  With Low Cost Monthly.<br /><br />
-                - Try the Software First To See If It Fits Your Requirement. <br />&nbsp;
-                Then Pay.<br /><br />
-                - Customize Software If Needed. (Charged Separately)<br /><br />
-                - Lifetime Support.
+                <font>- Borrow Software With Low Cost Monthly.</font><br /><br />
+                <font>- Try the Software First To See If It Fits Your Requirement.</font><br />&nbsp;
+                <font>Then Pay.</font><br /><br />
+                <font>- Customize Software If Needed. (Charged Separately)</font><br /><br />
+                <font>- Lifetime Support.</font><br /><br />
             </div>
         </div>
         <div class="content2">
-
+            <div class="content21">
+                <font>Put The Pieces Together To Customize Your Ideal APP</font>
+            </div>
+            <br /><br /><br />
+            <div class="content22">
+                <div class="content221">
+                    <div>
+                        <img src="index/Data/Google Play Store Icon.png" style="position:relative;height:100px;width:100px; top:20px;left:20px;" />
+                    </div>
+                    <div>
+                        <font style="font-size:40px;align-self:center">Upload To Google Play Store</font>
+                    </div>
+                </div>
+                <div class="content221">
+                    <font>Put The Pieces Together To Customize Your Ideal APP</font>
+                </div>
+                <div class="content221">
+                    <font>Put The Pieces Together To Customize Your Ideal APP</font>
+                </div>
+                <div class="content221">
+                    <font>Put The Pieces Together To Customize Your Ideal APP</font>
+                </div>
+            </div>
+            <br /><br /><br />s
         </div>
     </div>
     <!--<div class="about">
