--- a/index.html
+++ b/index.html
@@ -15,55 +15,118 @@
             <font style="font-size:30px">by Beta Jone</font>
         </div>
         <div class="title2">
-            
+            Contact Me?&nbsp;&nbsp;
+            <a href="https://t.me/Software_Monthly" style=" text-decoration: none">Telegram</a>&nbsp;&nbsp;
+            <a href="https://discord.com/invite/97uHACc3cG" style=" text-decoration: none">Discord</a>
+        </div>
+        <div class="title3">
+            <a style="text-decoration:none" href="https://www.paypal.com/ncp/payment/7RCQ4QVACNLVW">Donate Me?</a>
         </div>
     </div>
     <div class="content">
         <div class="content1">
             <div class="content11">
-                <font>- Borrow Software With Low Cost Monthly.</font><br /><br />
-                <font>- Try the Software First To See If It Fits Your Requirement.</font><br />&nbsp;
-                <font>Then Pay.</font><br /><br />
-                <font>- Customize Software If Needed. (Charged Separately)</font><br /><br />
-                <font>- Lifetime Support.</font><br /><br />
+                <font>- Borrow Software With Low Cost Monthly Or Buy Permanently. (Android, IOS,</font><br />&nbsp;
+                <font>Desktop, Website)</font><br /><br />
+                <font>- Customize The Software If Needed. (Charged Separately)</font><br /><br />
+                <font>- Try the Software First To See If It Fits Your Requirement. Then Pay.</font><br />&nbsp;
+                <font>(Only For Test App)</font><br /><br />
+                <font>- Lifetime Support For Monthly Plan. (See The Plans Below)</font><br /><br />
             </div>
         </div>
         <div class="content2">
             <div class="content21">
-                <font>Put The Pieces Together To Customize Your Ideal APP</font>
+                <font>
+                    Try the Test App for Free. If you like it,<br />
+                    you can apply with 2 Plans Shown Below. <br /><br />
+                    You can Customize the Software if Needed.<br />
+                    Customizing the Software Will be<br />
+                    Charged 20$ Hourly.<br /><br />
+                    Choose Your Favourite Plan.
+                </font>
             </div>
             <br /><br /><br />
             <div class="content22">
                 <div class="content221">
-                    <div>
-                        <img src="index/Data/Google Play Store Icon.png" style="position:relative;height:100px;width:100px; top:20px;left:20px;" />
-                    </div>
-                    <div>
-                        <font style="font-size:40px;align-self:center">Upload To Google Play Store</font>
-                    </div>
+                    <font style="font-size: 45px; color:blue">Monthly Plan</font><br /><br />
+                    <font>
+                        Pay Monthly for the Software.<br />
+                        (Software Fee + <a href="#OtherFee">Other Fee</a>)<br /><br />
+                        <font style="font-size:45px; color:cornflowerblue">What You Get</font><br /><br />
+                        We will help you until you can run the app yourself.<br />
+                        Maintenance of the Software.<br />
+                        Updating the Software with New Features.<br />
+                        Manage payment for Other Fee.<br /><br />
+                        You Don't have to Worry about the Software.<br />
+                        We will ensure it run smoothly.<br />&nbsp;
+                    </font>
                 </div>
                 <div class="content221">
-                    <font>Put The Pieces Together To Customize Your Ideal APP</font>
-                </div>
-                <div class="content221">
-                    <font>Put The Pieces Together To Customize Your Ideal APP</font>
-                </div>
-                <div class="content221">
-                    <font>Put The Pieces Together To Customize Your Ideal APP</font>
+                    <font style="font-size: 45px; color: blue">One Time Plan</font><br /><br />
+                    <font>
+                        Pay Certain Amount for the Software<br /><br />
+                        <font style="font-size:45px; color:cornflowerblue">What You Get</font><br /><br />
+                        We will help you until you can run the app yourself.<br />
+                        You have to pay <a href="#OtherFee">Other Fee</a> yourself.<br />
+                        We will send you the Software and that it.
+                    </font>
                 </div>
             </div>
-            <br /><br /><br />s
+            <br /><br /><br id="OtherFee" />&nbsp;
+        </div>
+        <div class="content3">
+            <div class="content31">
+                <font>Other Fee & Add On Features</font>
+            </div>
+            <div class="content32">
+                <div class="content321">
+                    <div class="content3211">
+                        <div>
+                            <img src="index/Data/Google Play Store Icon.png" style="position:relative;height:100px;width:100px; top:20px;left:20px;" />
+                        </div>
+                        <div>
+                            <font style="position: relative; font-size: 45px; top: 40px">Upload To Google Play Store</font>
+                        </div>
+                    </div>
+                    <div class="content3212">
+                        <font>We will help until the App is Live on Google Play Store.</font><br /><br />
+                        <font>If you don't have Google Play Console Account, we will help creating it.</font><br /><br />
+                        <font>We can host the App easily and then transfer to your Account. (50$ weekly)</font>
+                    </div>
+                </div>
+                <div class="content321">
+                    <div class="content3211">
+                        <div>
+                            <img src="index/Data/DataBase Icon.png" style="position:relative;height:100px;width:100px; top:20px;left:20px;" />
+                        </div>
+                        <div>
+                            <font style="position: relative; font-size: 45px; top: 40px">Connection With Database</font>
+                        </div>
+                    </div>
+                    <div class="content3212">
+                        <font>Connect the App with Database for online access.</font><br /><br />
+                        <font>If you have your own Database, we will connect the Software using it.</font><br /><br />
+                        <font>If not, we will use our Database. (Charge Database Fee Monthly)</font>
+                    </div>
+                </div>
+                <!-- <div class="content321">
+         <div class="content3211">
+             <div>
+                 <img src="index/Data/DataBase Icon.png" style="position:relative;height:100px;width:100px; top:20px;left:20px;" />
+             </div>
+             <div>
+                 <font style="position: relative; font-size: 45px; top: 40px">Connection With Database</font>
+             </div>
+         </div>
+         <div class="content3212">
+             <font>Connect the App with Database for online access.</font><br /><br />
+             <font>If you don't have Google Play Console Account, we will help creating it.</font><br /><br />
+             <font>We can host the App easily and then transfer to your Account. (100$ weekly, Paid Upfront)</font>
+         </div>
+     </div>-->
+                <br /><br />&nbsp;
+            </div>
         </div>
     </div>
-    <!--<div class="about">
-        <div class="contactme">
-            Contact Me?&nbsp;&nbsp;
-            <a href="https://t.me/Software_Monthly" style=" text-decoration: none">Telegram</a>&nbsp;&nbsp;
-            <a href="https://discord.com/invite/97uHACc3cG" style=" text-decoration: none">Discord</a>
-        </div>
-        <div class="donateme">
-            <a href="https://www.paypal.com/ncp/payment/7RCQ4QVACNLVW">Donate Me?</a>
-        </div>
-    </div>-->
 </body>
 </html>
